--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "keywords": [],
   "author": "",
+  "type": "module",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Marksalz/sequelize-demo/issues"
